objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <description>Pick list field to capture call outcome or disposition</description>
        <label>Call Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spoke to Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Spoke to Decision Maker &amp; Email</fullName>
                </value>
                <value>
                    <fullName>Voicemail &amp; E-mail</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Left Message with Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Left Message with Gatekeeper &amp; Email</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>No Response &amp; Email</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Call &amp; E-mail</fullName>
                    <isActive>false</isActive>
                    <label>Call &amp; E-mail</label>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                    <isActive>false</isActive>
                    <label>Left Voicemail</label>
                </value>
                <value>
                    <fullName>Received Customer Voicemail</fullName>
                    <isActive>false</isActive>
                    <label>Received Customer Voicemail</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CAN-Accuracy &amp; Maximum Refund Guarantee</fullName>
                </value>
                <value>
                    <fullName>CAN-Assessment Review and Explanation</fullName>
                </value>
                <value>
                    <fullName>CAN-Business Question</fullName>
                </value>
                <value>
                    <fullName>CAN-Capital Cost Allowance (CCA)</fullName>
                </value>
                <value>
                    <fullName>CAN-Customer Service</fullName>
                </value>
                <value>
                    <fullName>CAN-Deductions &amp; Credits</fullName>
                </value>
                <value>
                    <fullName>CAN-Donations</fullName>
                </value>
                <value>
                    <fullName>CAN-Filing Status</fullName>
                </value>
                <value>
                    <fullName>CAN-Income</fullName>
                </value>
                <value>
                    <fullName>CAN-Investment Income &amp; Credits</fullName>
                </value>
                <value>
                    <fullName>CAN-Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>CAN-Personal Information</fullName>
                </value>
                <value>
                    <fullName>CAN-Product Question</fullName>
                </value>
                <value>
                    <fullName>CAN-Provincial Tax Questions (except QC)</fullName>
                </value>
                <value>
                    <fullName>CAN-QC Tax Questions</fullName>
                </value>
                <value>
                    <fullName>CAN-Review &amp; NETFILE Error Messages</fullName>
                </value>
                <value>
                    <fullName>CAN-RRSP/Pension</fullName>
                </value>
                <value>
                    <fullName>CAN-Working on My Return</fullName>
                </value>
                <value>
                    <fullName>Dropped Contact - Escalate to leadership</fullName>
                </value>
                <value>
                    <fullName>HMS - Reached but opted out</fullName>
                </value>
                <value>
                    <fullName>HMS - Unable to reach</fullName>
                </value>
                <value>
                    <fullName>Other Intuit Software</fullName>
                </value>
                <value>
                    <fullName>ProSeries/Lacerte</fullName>
                </value>
                <value>
                    <fullName>Test Contact</fullName>
                </value>
                <value>
                    <fullName>TurboTax (wrong country)</fullName>
                </value>
                <value>
                    <fullName>US-ACA</fullName>
                </value>
                <value>
                    <fullName>US-Audit Support Center</fullName>
                </value>
                <value>
                    <fullName>US-Audit Support Guarantee</fullName>
                </value>
                <value>
                    <fullName>US-Business Questions</fullName>
                </value>
                <value>
                    <fullName>US-Credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ININCallId__c</fullName>
        <description>ININ Call ID or Interaction ID</description>
        <label>ININ Interaction ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININ_ACD_Interaction_Id__c</fullName>
        <label>ININ ACD Interaction Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININ_Caller_ID__c</fullName>
        <label>ININ Caller ID.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININ_IVR_DNIS__c</fullName>
        <label>ININ IVR DNIS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININ_IVR_Interaction_Id__c</fullName>
        <label>ININ IVR Interaction Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININ_Interaction_ID__c</fullName>
        <label>ININ Interaction ID.</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININ_SIP_Id__c</fullName>
        <label>ININ SIP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININ_Universal_ID__c</fullName>
        <description>Intuit created ININ Universal ID.  This ID is the parent ID for all of the legs of an interaction. Each interaction may have a separate ININ Call ID</description>
        <label>ININ Universal ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININ_Workgroup_Name__c</fullName>
        <label>ININ Workgroup Name.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Time_Stamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAN-Product Support</fullName>
                </value>
                <value>
                    <fullName>CAN-Tax Support</fullName>
                </value>
                <value>
                    <fullName>CAN-Tax Advice</fullName>
                </value>
                <value>
                    <fullName>Dropped/Misdirected</fullName>
                </value>
                <value>
                    <fullName>US-Product Support</fullName>
                </value>
                <value>
                    <fullName>US-Tax Advice</fullName>
                </value>
                <value>
                    <fullName>US-Tax Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Access/Find a Prior Year</fullName>
                </value>
                <value>
                    <fullName>Access/find current year</fullName>
                </value>
                <value>
                    <fullName>Access/find prior year</fullName>
                </value>
                <value>
                    <fullName>Account Updates</fullName>
                </value>
                <value>
                    <fullName>Activations/Unlocks</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>AMT Calculation</fullName>
                </value>
                <value>
                    <fullName>Audit Support Center</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Business Income &amp; Expense</fullName>
                </value>
                <value>
                    <fullName>Business Return Forced Upgrade</fullName>
                </value>
                <value>
                    <fullName>Cancellations/Sub Cancellations</fullName>
                </value>
                <value>
                    <fullName>Carry Forward Donations</fullName>
                </value>
                <value>
                    <fullName>CCA Classes</fullName>
                </value>
                <value>
                    <fullName>Change of Marital Status</fullName>
                </value>
                <value>
                    <fullName>Child Care Tax</fullName>
                </value>
                <value>
                    <fullName>CNIL/ABIL</fullName>
                </value>
                <value>
                    <fullName>Contribution</fullName>
                </value>
                <value>
                    <fullName>Credit for Taxes Paid</fullName>
                </value>
                <value>
                    <fullName>Deceased Tax Payers</fullName>
                </value>
                <value>
                    <fullName>Delete a Form or State</fullName>
                </value>
                <value>
                    <fullName>Dependant Credits</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Display Issues</fullName>
                </value>
                <value>
                    <fullName>Disposition of Asset</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>DOMA</fullName>
                </value>
                <value>
                    <fullName>Download/Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>This field is used to identify Activity sub type.  Primarily used for renewal program.</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Tax Renewal</fullName>
                </value>
                <value>
                    <fullName>Lacerte</fullName>
                </value>
                <value>
                    <fullName>ProConnect</fullName>
                </value>
                <value>
                    <fullName>ProSeries</fullName>
                </value>
                <value>
                    <fullName>QBDT</fullName>
                </value>
                <value>
                    <fullName>QBMAC</fullName>
                </value>
                <value>
                    <fullName>QBO</fullName>
                </value>
                <value>
                    <fullName>QBOA</fullName>
                </value>
                <value>
                    <fullName>Care</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Respond to Marketing Email</fullName>
                </value>
                <value>
                    <fullName>Returning outbound call message</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Training Inquiry</fullName>
                </value>
                <value>
                    <fullName>Update Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TempOwnerId__c</fullName>
        <label>TempOwnerId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Type__c</fullName>
        <description>Additional granularity for the task. BTBE-102 requested by SBG Care.</description>
        <label>Tertiary Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$ In</fullName>
                </value>
                <value>
                    <fullName>$ Out</fullName>
                </value>
                <value>
                    <fullName>Add Ons</fullName>
                </value>
                <value>
                    <fullName>Apps</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Billing/Account Management</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Cert</fullName>
                </value>
                <value>
                    <fullName>Client Firm Management</fullName>
                </value>
                <value>
                    <fullName>Data Damage</fullName>
                </value>
                <value>
                    <fullName>Efiling errors</fullName>
                </value>
                <value>
                    <fullName>FAP</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Siebel</fullName>
                </value>
                <value>
                    <fullName>Team Access</fullName>
                </value>
                <value>
                    <fullName>Trial Balance</fullName>
                </value>
                <value>
                    <fullName>Wholesale Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent_in_Minutes__c</fullName>
        <label>Time Spent in Minutes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_zone__c</fullName>
        <description>Help with location. 6.6.13</description>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Magadan Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Norfolk Islands Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Sydney)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Adelaide)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korean Standard Time (Asia/Seoul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Philippine Time (Asia/Manila)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Saigon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Bangladesh Time (Asia/Dacca)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Yekaterinburg Time (Asia/Yekaterinburg)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Nepal Time (Asia/Katmandu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:30) India Standard Time (Asia/Calcutta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workgroup_Name__c</fullName>
        <description>ININ Work Group Name</description>
        <label>ININ Workgroup Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>CIC_Call_History</fullName>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.CALLTYPE</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Phone__c</columns>
        <columns>ININ_Caller_ID__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>ININ_Interaction_ID__c</columns>
        <columns>ININ_Workgroup_Name__c</columns>
        <columns>TASK.CALLDURATION</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CALLTYPE</field>
            <operation>notEqual</operation>
        </filters>
        <label>CIC Call History</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>Tasks_and_Events_for_Today</fullName>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Time_zone__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tasks and Events for Today</label>
    </listViews>
    <listViews>
        <fullName>Tasks_and_Events_for_Todays</fullName>
        <columns>ACTIVITY.TASK</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>Phone__c</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Time_zone__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tasks and Events for Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysTask</fullName>
        <columns>TASK.WHO_NAME</columns>
        <columns>Phone__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>Time_zone__c</columns>
        <columns>REMINDER_DATE_TIME</columns>
        <columns>IS_REMINDER_SET</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.DUE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>Time_zone__c</columns>
        <columns>REMINDER_DATE_TIME</columns>
        <columns>IS_REMINDER_SET</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.DUE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>